--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^4.12.1
   cloud_firestore:  ^4.12.2
   modal_progress_hud_nsn: ^0.4.0
+  image_picker: ^1.0.5
+  firebase_storage: ^11.5.6
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
